novo frontend, e metodos novos também de customização do livro, autor, leitor e admin, permissões sobre dados e muito mais

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,22 @@
-spring.datasource.url=jdbc:h2:mem:cruddb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.username=sa
-spring.datasource.password=
-spring.h2.console.enabled=true
+# Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/crudjava
+spring.datasource.username=postgres
+spring.datasource.password=123456
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# File Upload Configuration
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+# Static Resources
+spring.web.resources.static-locations=classpath:/static/,file:uploads/
+spring.mvc.static-path-pattern=/static/**
+
+# Thymeleaf Configuration
+spring.thymeleaf.cache=false
