--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,11 @@
     "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.1",
+    "vite-tsconfig-paths": "^4.3.2",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "typescript": "^5.5.4",
     "vite": "^5.4.0"
   }
 }
-
