feat: refactor WebConfig and add SpaController for SPA routing; update application properties for static asset handling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,7 @@ spring.mvc.static-path-pattern=/static/**
 
 # Thymeleaf Configuration
 spring.thymeleaf.cache=false
+
+# Ensure routing does not capture static asset files for SPA
+# (Optional) If you still face asset forwarding issues, enable AntPathMatcher
+# spring.mvc.pathmatch.matching-strategy=ant_path_matcher
