feat: Implement base entity and auditing for JPA entities
- Added BaseEntity class to provide common fields (id, createdAt, updatedAt) for all entities.
- Enabled JPA auditing in CrudJavaApplication.
- Updated Book and Loan entities to extend BaseEntity and utilize auditing features.

refactor: Update Book entity and repository

- Renamed authorUser to createdBy in Book entity.
- Added validation annotations for fields in Book entity.
- Updated BookRepository to reflect changes in field names.

refactor: Modify Loan entity and service

- Updated Loan entity to include new fields and validation.
- Changed loanDate and dueDate to LocalDateTime.
- Updated LoanService to handle new date types and business logic.

feat: Enhance User entity and security configuration

- Implemented UserDetails in User entity for Spring Security integration.
- Added JWT authentication and authorization mechanisms.
- Configured security settings to manage user roles and permissions.

chore: Update application properties for H2 database and CORS

- Configured H2 database for development and commented out PostgreSQL settings.
- Added CORS configuration for API access.

feat: Implement JWT token provider and authentication filter

- Created JwtTokenProvider for generating and validating JWT tokens.
- Implemented JwtAuthenticationFilter to handle JWT authentication in requests.

fix: Update User repository and service methods

- Renamed methods in UserRepository to reflect changes in User entity.
- Updated UserService to use new method names and handle user activation status.

style: Improve code formatting and organization

- Cleaned up code formatting across various classes for better readability.
- Added comments and documentation where necessary.

--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.3.3</version>
+        <version>3.2.4</version>
         <relativePath/>
     </parent>
 
@@ -15,13 +15,17 @@
     <artifactId>crud-java</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>crud-java</name>
-    <description>Projeto CRUD com Spring Boot</description>
+    <description>Sistema Completo de Biblioteca com Spring Boot e React</description>
 
     <properties>
         <java.version>17</java.version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
+        <!-- Spring Boot Starters -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -43,14 +47,66 @@
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.thymeleaf.extras</groupId>
             <artifactId>thymeleaf-extras-springsecurity6</artifactId>
+        </dependency>
+        
+        <!-- Database -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
         </dependency>
+        
+        <!-- JWT Authentication -->
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-api</artifactId>
+            <version>0.12.3</version>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-impl</artifactId>
+            <version>0.12.3</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-jackson</artifactId>
+            <version>0.12.3</version>
+            <scope>runtime</scope>
+        </dependency>
+        
+        <!-- File Upload -->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.5</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.11.0</version>
+        </dependency>
+        
+        <!-- Development Tools -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
+        
+        <!-- Testing -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -65,7 +121,37 @@
 
     <build>
         <plugins>
-            <!-- Build the React SPA and copy it into Spring static folder during Maven build -->
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>
+                            <groupId>org.springframework.boot</groupId>
+                            <artifactId>spring-boot-devtools</artifactId>
+                        </exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0</version>
+            </plugin>
+            
+            <!-- Frontend build plugin -->
             <plugin>
                 <groupId>com.github.eirslett</groupId>
                 <artifactId>frontend-maven-plugin</artifactId>
@@ -127,11 +213,6 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
-
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
